plugins {
    id 'java'
}

group 'ch.szclsb'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(19)
    }
}

test {
    useJUnitPlatform()
    jvmArgs("--enable-preview", "--enable-native-access=ch.szclsb.rkb.driver")
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
